--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -6197,60 +6197,72 @@
                 <option value=" ">Offen würfeln</option>
                 <option value="/w GM ">Nur zu Meister würfeln</option>
             </select>
-            <br><b style="display: inline-block; font-size:90%; width: 2.5em">SE</b>
-            <b style="display: inline-block; font-size:90%; width: 15.25em;">Talent</b>
-            <b style="display: inline-block; font-size:90%; width: 15.25em;">Eigenschaften</b>
-            <b style="display: inline-block; font-size:90%; width: 3.25em;">TaW</b>
-            <b style="display: inline-block; font-size:90%; width: 3em;">Probe</b>
-            <br>
+
+            <table>
+                <tr>
+                    <th style="width: 23em">Gabe (+ Zusatz)</th>
+                    <th style="width: 15.25em;">Eigenschaften</th>
+                    <th style="width: 3.25em;">TaW</th>
+                    <th style="width: 3em;">Probe</th>
+                </tr>
+            </table>
             <fieldset class="repeating_GabenTalente">
-                <input type="checkbox" name="attr_SE" style="width: 2em">
-                <select name="attr_TalentName" class="atype" style="width: 14em;">
-                    <option>---</option>
-                    <option>Empathie</option>
-                    <option>Gefahreninstinkt</option>
-                    <option>Geräuschhexerei</option>
-                    <option>Kräfteschub/Talentschub</option>
-                    <option>Magiegespür</option>
-                    <option>Prophezeien</option>
-                    <option>Tierempathie</option>
-                    <option>Zwergennase</option>
-                </select>
-                <select name="attr_Eigenschaft1" class="sheet-talent-eigenschaft">
-                    <option>---</option>
-                    <option value="@{MU}">MU</option>
-                    <option value="@{KL}">KL</option>
-                    <option value="@{IN}">IN</option>
-                    <option value="@{CH}">CH</option>
-                    <option value="@{FF}">FF</option>
-                    <option value="@{GE}">GE</option>
-                    <option value="@{KO}">KO</option>
-                    <option value="@{KK}">KK</option>
-                </select>
-                <select name="attr_Eigenschaft2" class="sheet-talent-eigenschaft">
-                    <option>---</option>
-                    <option value="@{MU}">MU</option>
-                    <option value="@{KL}">KL</option>
-                    <option value="@{IN}">IN</option>
-                    <option value="@{CH}">CH</option>
-                    <option value="@{FF}">FF</option>
-                    <option value="@{GE}">GE</option>
-                    <option value="@{KO}">KO</option>
-                    <option value="@{KK}">KK</option>
-                </select>
-                <select name="attr_Eigenschaft3" class="sheet-talent-eigenschaft">
-                    <option>---</option>
-                    <option value="@{MU}">MU</option>
-                    <option value="@{KL}">KL</option>
-                    <option value="@{IN}">IN</option>
-                    <option value="@{CH}">CH</option>
-                    <option value="@{FF}">FF</option>
-                    <option value="@{GE}">GE</option>
-                    <option value="@{KO}">KO</option>
-                    <option value="@{KK}">KK</option>
-                </select>
-                <input type="number" name="attr_TaW" style="width: 3em;">
-                <button type="roll" value="@{gm_roll_opt} &{template:DSA-Talente} {{name=@{TalentName}}} {{mod=[[?{Erleichterung (−) oder Erschwernis (+)|0}d1cs0cf2]]}} {{taw=[[@{TaW}]]}} {{stat1=[[@{Eigenschaft1}]]}} {{stat2=[[@{Eigenschaft2}]]}} {{stat3=[[@{Eigenschaft3}]]}} {{Talent=[[ { [[{0d1 + @{TaW} - (?{Erleichterung (−) oder Erschwernis (+)|0}), 0d1}kh1]] - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (−) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{Eigenschaft1}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (−) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{Eigenschaft2}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (−) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{Eigenschaft3}, 0d1}kh1, 0d1 + @{TaW}}dh1]]}}"></button>
+                <span style="display: inline-block; width: 23em">
+                    <select name="attr_Name_Gabe" class="atype" style="width: 10em;">
+                        <option value="nothing">---</option>
+                        <option value="empathie">Empathie</option>
+                        <option value="gefahreninstinkt">Gefahreninstinkt</option>
+                        <option value="geraeuschhexerei">Geräuschhexerei</option>
+                        <option value="kraefteschub/talentschub">Kräfteschub/Talentschub</option>
+                        <option value="magiegespuer">Magiegespür</option>
+                        <option value="prophezeien">Prophezeien</option>
+                        <option value="tierempathie">Tierempathie</option>
+                        <option value="zwergennase">Zwergennase</option>
+                    </select>
+                     (<input type="text" name="attr_Name_Gabe_Zusatz" style="width: 10em;"/>)
+                </span><span style="display: inline-block; width: 15.25em">
+                    <select name="attr_Eigenschaft1" class="sheet-talent-eigenschaft">
+                        <option value="nothing">---</option>
+                        <option value="mu">MU</option>
+                        <option value="kl">KL</option>
+                        <option value="in">IN</option>
+                        <option value="ch">CH</option>
+                        <option value="ff">FF</option>
+                        <option value="ge">GE</option>
+                        <option value="ko">KO</option>
+                        <option value="kk">KK</option>
+                    </select>
+                    <select name="attr_Eigenschaft2" class="sheet-talent-eigenschaft">
+                        <option value="nothing">---</option>
+                        <option value="mu">MU</option>
+                        <option value="kl">KL</option>
+                        <option value="in">IN</option>
+                        <option value="ch">CH</option>
+                        <option value="ff">FF</option>
+                        <option value="ge">GE</option>
+                        <option value="ko">KO</option>
+                        <option value="kk">KK</option>
+                    </select>
+                    <select name="attr_Eigenschaft3" class="sheet-talent-eigenschaft">
+                        <option value="nothing">---</option>
+                        <option value="mu">MU</option>
+                        <option value="kl">KL</option>
+                        <option value="in">IN</option>
+                        <option value="ch">CH</option>
+                        <option value="ff">FF</option>
+                        <option value="ge">GE</option>
+                        <option value="ko">KO</option>
+                        <option value="kk">KK</option>
+                    </select>
+                </span><span style="display: inline-block; width: 3.25em">
+                    <input type="number" name="attr_TaW" style="width: 3em;" value="3">
+                    <input type="hidden" name="attr_hiddenEigenschaft1" value="0">
+                    <input type="hidden" name="attr_hiddenEigenschaft2" value="0">
+                    <input type="hidden" name="attr_hiddenEigenschaft3" value="0">
+                    <input type="hidden" name="attr_Name_Gabe_Anzeige" value="">
+                </span><span style="display: inline-block; width: 3em">
+                <button type="roll" value="@{gm_roll_opt} &{template:DSA-Talente} {{name=@{Name_Gabe_Anzeige}}} {{mod=[[?{Erleichterung (-) oder Erschwernis (+)|0}d1cs0cf2]]}} {{taw=[[@{TaW}]]}} {{stat1=[[@{hiddenEigenschaft1}]]}} {{stat2=[[@{hiddenEigenschaft2}]]}} {{stat3=[[@{hiddenEigenschaft3}]]}} {{Talent=[[ { [[{0d1 + @{TaW} - (?{Erleichterung (-) oder Erschwernis (+)|0}), 0d1}kh1]] - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft1}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft2}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft3}, 0d1}kh1, 0d1 + @{TaW}}dh1]]}}"></button>
+                </span>
             </fieldset>
         </div>
 
@@ -15518,6 +15530,42 @@ on("sheet:opened change:wound_kopf change:wound_ra change:wound_la change:wound_
     }); 
 });
 
+on("change:repeating_gabenTalente:Name_Gabe change:repeating_gabenTalente:Name_Gabe_Zusatz", function(eventInfo) {
+    getAttrs(["repeating_gabenTalente_Name_Gabe", "repeating_gabenTalente_Name_Gabe_Zusatz"], function(v) {
+        let gabe = v.repeating_gabenTalente_Name_Gabe;
+        let gabeZusatz = v.repeating_gabenTalente_Name_Gabe_Zusatz;
+        let gaben = {
+            "empathie": [ ["mu", "in", "in"], "Empathie" ],
+            "gefahreninstinkt": [ ["kl", "in", "in"], "Gefahreninstinkt" ],
+            "geraeuschhexerei": [ ["in", "ch", "ko"], "Geräuschhexerei" ],
+            "kraefteschub/talentschub": [ ["mu", "in", "ko"], "Kräfteschub/Talentschub" ],
+            "magiegespuer": [ ["mu", "in", "in"], "Magiegespür" ],
+            "prophezeien": [ ["in", "in", "ch"], "Prophezeien" ],
+            "tierempathie": [ ["mu", "in", "ch"], "Tierempathie" ],
+            "zwergennase": [ ["in", "in", "ff"], "Zwergennase" ]
+        };
+        if (gabe != "nothing") {
+            let update = {
+                'repeating_gabenTalente_eigenschaft1': gaben[gabe][0][0],
+                'repeating_gabenTalente_eigenschaft2': gaben[gabe][0][1],
+                'repeating_gabenTalente_eigenschaft3': gaben[gabe][0][2],
+                'repeating_gabenTalente_Name_Gabe_Anzeige': gaben[gabe][1]
+            };
+            if (gabeZusatz != "") {
+                update['repeating_gabenTalente_Name_Gabe_Anzeige'] += " (" + gabeZusatz + ")";
+            }
+            setAttrs(update);
+        } else {
+            setAttrs({
+                'repeating_gabenTalente_eigenschaft1': "nothing",
+                'repeating_gabenTalente_eigenschaft2': "nothing",
+                'repeating_gabenTalente_eigenschaft3': "nothing",
+                'repeating_gabenTalente_Name_Gabe_Anzeige': "Keine Gabe gewählt"
+            });
+        }
+    });
+});
+
 on("change:repeating_metatalente:Name_Metatalent change:repeating_metatalente:Name_Metatalent_Eigen", function(eventInfo) {
     getAttrs(["repeating_metatalente_Name_Metatalent", "repeating_metatalente_Name_Metatalent_Eigen"], function(v) {
         let metatalent = v.repeating_metatalente_Name_Metatalent;
@@ -15551,6 +15599,17 @@ on("change:repeating_metatalente:Name_Metatalent change:repeating_metatalente:Na
     });
 });
 
+on("change:repeating_gabenTalente:eigenschaft1 change:repeating_gabenTalente:eigenschaft2 change:repeating_gabenTalente:eigenschaft3", function(eventInfo) {
+    getAttrs(["repeating_gabenTalente_eigenschaft1", "repeating_gabenTalente_eigenschaft2", "repeating_gabenTalente_eigenschaft3", "mu", "kl", "in", "ch", "ff", "ge", "ko", "kk"], function(v) {
+            let attributes = {"mu": +v.mu, "kl": +v.kl, "in": +v.in, "ch": +v.ch, "ff": +v.ff, "ge": +v.ge, "ko": +v.ko, "kk": +v.kk};
+            setAttrs({
+                'repeating_gabenTalente_hiddeneigenschaft1': attributes[v.repeating_gabenTalente_eigenschaft1] || 0,
+                'repeating_gabenTalente_hiddeneigenschaft2': attributes[v.repeating_gabenTalente_eigenschaft2] || 0,
+                'repeating_gabenTalente_hiddeneigenschaft3': attributes[v.repeating_gabenTalente_eigenschaft3] || 0
+            });
+    });
+});
+
 on("change:repeating_metatalente:eigenschaft1 change:repeating_metatalente:eigenschaft2 change:repeating_metatalente:eigenschaft3", function(eventInfo) {
     getAttrs(["repeating_metatalente_eigenschaft1", "repeating_metatalente_eigenschaft2", "repeating_metatalente_eigenschaft3", "mu", "kl", "in", "ch", "ff", "ge", "ko", "kk"], function(v) {
             let attributes = {"mu": +v.mu, "kl": +v.kl, "in": +v.in, "ch": +v.ch, "ff": +v.ff, "ge": +v.ge, "ko": +v.ko, "kk": +v.kk};
@@ -15567,6 +15626,19 @@ on("change:mu change:kl change:in change:ch change:ff change:ge change:ko change
     getAttrs(["mu", "kl", "in", "ch", "ff", "ge", "ko", "kk"], function(v) {
         let attributes = {"mu": +v.mu, "kl": +v.kl, "in": +v.in, "ch": +v.ch, "ff": +v.ff, "ge": +v.ge, "ko": +v.ko, "kk": +v.kk};
         let update = {};
+
+        // Aktualisiere Gaben
+        getSectionIDs("gaben", function(idarray) {
+             _.each(idarray, function(currentID, i) {
+                getAttrs(["repeating_gabenTalente_" + currentID + "_eigenschaften"], function(v) {
+                    update["repeating_gabenTalente_" + currentID + "_hiddeneigenschaft1"] = attributes[v["repeating_gabenTalente_" + currentID + "_eigenschaft1"]];
+                    update["repeating_gabenTalente_" + currentID + "_hiddeneigenschaft2"] = attributes[v["repeating_gabenTalente_" + currentID + "_eigenschaft2"]];
+                    update["repeating_gabenTalente_" + currentID + "_hiddeneigenschaft3"] = attributes[v["repeating_gabenTalente_" + currentID + "_eigenschaft3"]];
+                    setAttrs(update);
+                });
+            });
+        });
+
         // Aktualisiere Metatalente
         getSectionIDs("metatalente", function(idarray) {
              _.each(idarray, function(currentID, i) {
