--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -6200,7 +6200,7 @@
 
             <table>
                 <tr>
-                    <th style="width: 23em">Gabe (+ Zusatz)</th>
+                    <th style="width: 23em">Gabe + Zusatz/Eigene Gabe</th>
                     <th style="width: 15.25em;">Eigenschaften</th>
                     <th style="width: 3.25em;">TaW</th>
                     <th style="width: 3em;">Probe</th>
@@ -6209,7 +6209,6 @@
             <fieldset class="repeating_Gaben">
                 <span style="display: inline-block; width: 23em">
                     <select name="attr_Name_Gabe" class="atype" style="width: 10em;">
-                        <option value="nothing">---</option>
                         <option value="empathie">Empathie</option>
                         <option value="gefahreninstinkt">Gefahreninstinkt</option>
                         <option value="geraeuschhexerei">Geräuschhexerei</option>
@@ -6218,8 +6217,9 @@
                         <option value="prophezeien">Prophezeien</option>
                         <option value="tierempathie">Tierempathie</option>
                         <option value="zwergennase">Zwergennase</option>
+                        <option value="nothing" selected>Eigene</option>
                     </select>
-                     (<input type="text" name="attr_Name_Gabe_Zusatz" style="width: 10em;"/>)
+                    <input type="text" name="attr_Name_Gabe_Zusatz" style="width: 10em;"/>
                 </span><span style="display: inline-block; width: 15.25em">
                     <select name="attr_Eigenschaft1" class="sheet-talent-eigenschaft">
                         <option value="nothing">---</option>
@@ -6259,7 +6259,7 @@
                     <input type="hidden" name="attr_hiddenEigenschaft1" value="0">
                     <input type="hidden" name="attr_hiddenEigenschaft2" value="0">
                     <input type="hidden" name="attr_hiddenEigenschaft3" value="0">
-                    <input type="hidden" name="attr_Name_Gabe_Anzeige" value="">
+                    <input type="hidden" name="attr_Name_Gabe_Anzeige" value="Eigene Gabe">
                 </span><span style="display: inline-block; width: 3em">
                 <button type="roll" value="@{gm_roll_opt} &{template:DSA-Talente} {{name=@{Name_Gabe_Anzeige}}} {{mod=[[?{Erleichterung (-) oder Erschwernis (+)|0}d1cs0cf2]]}} {{taw=[[@{TaW}]]}} {{stat1=[[@{hiddenEigenschaft1}]]}} {{stat2=[[@{hiddenEigenschaft2}]]}} {{stat3=[[@{hiddenEigenschaft3}]]}} {{Talent=[[ { [[{0d1 + @{TaW} - (?{Erleichterung (-) oder Erschwernis (+)|0}), 0d1}kh1]] - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft1}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft2}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft3}, 0d1}kh1, 0d1 + @{TaW}}dh1]]}}"></button>
                 </span>
@@ -15613,9 +15613,13 @@ on("change:repeating_Gaben:Name_Gabe change:repeating_Gaben:Name_Gabe_Zusatz", f
             }
             setAttrs(update);
         } else {
-            setAttrs({
-                'repeating_Gaben_Name_Gabe_Anzeige': "Keine Gabe gewählt"
-            });
+            let update = {};
+            if(gabeZusatz !== "") {
+                update['repeating_Gaben_Name_Gabe_Anzeige'] = gabeZusatz;
+            } else {
+                update['repeating_Gaben_Name_Gabe_Anzeige'] = "Eigene Gabe";
+            }
+            setAttrs(update);
         }
     });
 });
